--- a/package.json
+++ b/package.json
@@ -20,7 +20,8 @@
     "ava": "^0.13.0"
   },
   "jshintConfig": {
-    "esversion": 6
+    "esversion": 6,
+    "node": true
   },
   "dependencies": {
     "debug": "^2.2.0"
